--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,13 @@
     },
     "require-dev": {
         "phpunit/phpunit" : "4.*",
-        "scrutinizer/ocular": "~1.1"
+        "scrutinizer/ocular": "~1.1",
+        "codeception/specify": "*"
     },
     "autoload": {
         "psr-4": {
-            "Michaels\\Midas\\": "src"
+            "Michaels\\Midas\\": "src",
+            "Michaels\\Midas\\Test\\": "tests"
         }
     },
     "autoload-dev": {
