--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         }
     ],
     "require": {
-        "php" : ">=5.3.0"
+        "php" : ">=5.3.0",
+        "illuminate/support": "5.*"
     },
     "require-dev": {
         "phpunit/phpunit" : "4.*",
