--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Michaels\\Midas\\": "src",
-            "Michaels\\Midas\\Test\\": "tests"
+            "Michaels\\Midas\\": "src"
         }
     },
     "autoload-dev": {
