--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,4 @@ script:
 
 after_script:
   - php vendor/bin/ocular code-coverage:upload --format=php-clover coverage.clover
+  - php vendor/bin/coveralls
