--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     },
     "require-dev": {
         "phpunit/phpunit" : "4.*",
+        "scrutinizer/ocular": "~1.1",
         "satooshi/php-coveralls": "dev-master",
         "codeception/specify": "*"
     },
