--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ before_script:
   - travis_retry composer install --no-interaction --prefer-source --dev
 
 script:
-  - phpunit --coverage-text --coverage-clover=coverage.clover
+  - mkdir -p build/logs
+  - php vendor/bin/phpunit -c phpunit.xml.dist
 
 after_script:
-  - php vendor/bin/coveralls
+  - php vendor/bin/coveralls -v
